Definition of getWorkflowStatuses (v2)
