# plugins/orchestrator-common/api/openapi.yaml
@@ -175,6 +175,20 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/WorkflowSuggestionsDTO'
+  /v2/workflows/instances/statuses:
+    get:
+      operationId: getWorkflowStatuses
+      summary: Get workflow status list
+      description: Retrieve an array of workflow statuses as string
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/WorkflowRunStatusDTO'
 components:
   schemas:
     WorkflowOverviewListResultDTO:
@@ -334,3 +348,10 @@ components:
         - Completed
         - Aborted
         - Suspended
+    WorkflowRunStatusDTO:
+      type: object
+      properties:
+        key:
+          type: string
+        value:
+          type: string
